<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Switch
            android:id="@+id/filter_switch"
            style="@android:style/Widget.Material.CompoundButton.Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:checked="true"
            android:text="@string/filter"
            android:thumbTint="@color/DeepOrange"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:text="@string/distance" />

        <android.support.design.widget.TextInputLayout
            style="@style/TaxiTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/distance_filter"
                style="@style/TaxiTextInputEditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:text="@string/km_from_you" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/short_checkBox"
            style="@android:style/Widget.Material.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/OrangeBackground"
            android:buttonTint="@color/DeepOrange"
            android:drawableTint="@color/AccentOrange"
            android:foregroundTint="@color/Orange"
            android:text="@string/short_rides" />

        <CheckBox
            android:id="@+id/long_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/OrangeBackground"
            android:buttonTint="@color/DeepOrange"
            android:drawableTint="@color/AccentOrange"
            android:foregroundTint="@color/Orange"
            android:text="@string/long_rides" />
    </LinearLayout>
    <android.support.design.button.MaterialButton
        android:id="@+id/filter_button"
        style="@style/TaxiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/filter" />


</LinearLayout>